--- a/src/app/components/hobby/hobby.component.html
+++ b/src/app/components/hobby/hobby.component.html
@@ -77,10 +77,10 @@
       <div class="staff__note staff__note--quarter-down staff__note--middle" style="left: 80%"></div> -->
     </div>
     <div class="hobby__violin-wrapper"><span class="hobby__violin hobby__bike-title">Kolarstwo</span></div>
-    <img class="hobby__upper-image" src="/assets/violin.png" />
+    <img class="hobby__upper-image" src="./assets/violin.png" />
   </div>
   <div class="hobby__bike">
-    <img class="hobby__lower-image" src="/assets/bike.png" />
+    <img class="hobby__lower-image" src="./assets/bike.png" />
     <svg class="hobby__svg" preserveAspectRatio="none" style="position: absolute;top: 0;width: 100%;left: 0;/*! height: 100%; */z-index: 0;" viewBox="0 0 500 500">
       <path style="stroke: none; fill:white;/*! border-top: 1px solid white; */" d="M 0 85 C 148 184 350 0 500 18 L 500 0 L 0 0 Z\"></path>
     </svg>
