--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -21,7 +21,7 @@
   font-family: monospace;
 
   &__background {
-    background-image: url("/assets/oskar.png");
+    background-image: url("~/assets/oskar.png");
     background-size: cover;
     background-repeat:   no-repeat;
     background-position: center;
