--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -19,7 +19,7 @@
   // gap: 2rem;
 
   &__background {
-    background-image: url("/assets/computers.png");
+    background-image: url("~/assets/computers.png");
     background-size: cover;
     background-repeat:   no-repeat;
     background-position: left;
