--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -7,7 +7,7 @@ mat-card {
 
 .project {
   // width:  100%;
-  height: 55rem;
+  height: 60rem;
   // border: 1px solid white;
   // border-radius: 2rem;
   background-color: white;
@@ -59,40 +59,45 @@ mat-card {
   }
 
   &__header {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
     font-size: 3rem;
     text-align: left;
     position: relative;
-    padding: 1rem;
-    padding-left: 2rem;
+    padding: 1rem 2rem;
+    border-radius: 4px 4px 0 0;
     background-color: $primary-color;
     color: white;
-    // border-radius: 2rem 2rem 0 0;
+    font-weight: lighter;
   }
 
   &__desc {    
     // border-top: 1px dotted white;
     padding: 2rem;
     font-size: 2rem;
+    line-height: 1.5;
+    font-weight: lighter;
   }
 
   &__tech {
-    width: 3.5rem;
-    margin-right: 1rem;
-    position: absolute;
-    right: 0;
+    width:  3.5rem;
+    height: 3.5rem;
   }
 
   &__github {
     position: absolute;
-    right:  1rem;
+    right:  2rem;
     bottom: 2rem;
+    height: 3.5rem;
+    line-height: 1;
     font-size: 3.5rem;
     color: black;
   }
 
   &__try {
     position: absolute;
-    bottom: 2.4rem;
+    bottom: 2rem;
     left: 2rem;
     border: 1px solid black;
     transition: background-color 0.5s, color 0.5s;
@@ -112,7 +117,7 @@ mat-card {
     }
 
     &__img-container:hover {
-      transform: scale(1.3);
+      transform: scale(1.1);
     
       img {
         // object-fit: contain;
