--- a/src/app/components/tech/tech.component.scss
+++ b/src/app/components/tech/tech.component.scss
@@ -10,7 +10,7 @@
   // border-radius: 2rem;
 
   &__header {
-    font-size: 2rem;
+    font-size: 2.4rem;
     text-align: center;
     display: flex;
     align-items: center;
@@ -18,15 +18,16 @@
     width: 100%;
     white-space: nowrap;
     margin: 0;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.15);
     border-radius: 25% 25% 0 0;
+    font-weight: lighter;
     color: black;
   }
 
   &__header::before, &__header::after {
     content: "";
     width: 100%;
-    height: 2px;
+    height: 1px;
     background-color: black;
   }
 
@@ -35,7 +36,7 @@
     width: 100%;
     flex: 1;
     justify-content: space-around;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.15);
     padding-bottom: 1rem;
   }
 
