--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -52,7 +52,7 @@
   }
 
   &__sub-header {
-    margin-top: 1rem;
+    margin-top: 1.1rem;
     font-size: 2rem;
     // text-shadow: 0px 1px 0px black, 1px 0px 0px black, -1px 0px 0px black, 0px -1px black;
     color: $primary-color;
@@ -65,6 +65,11 @@
     font-size: 5rem;
     cursor: pointer;
     color: $primary-color;
+    transition: color 0.5s;
+  }
+
+  &__nav-arrow:hover {
+    color: #173651;
   }
 
   &__icons {
@@ -90,8 +95,13 @@
       border-radius: 50%;
       border: 3px solid $primary-color;
       box-shadow: 0px 0px 3px white;
-
       color: $primary-color;
+      transition: border 0.5s, color 0.5s;
+    }
+
+    a:hover {
+      color: $primary-color-dark;
+      border: 3px solid $primary-color-dark;
     }
 
     fa-icon {
