--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -8,6 +8,7 @@
   
   font-size: 2rem;
   color: white;
+  // transition: background-color 1s;
 
   // background-color: rgba($color: #000000, $alpha: 0.2);
 
@@ -45,6 +46,14 @@
   &--hamburger-open &__links {
     visibility: visible;
     opacity: 1;
+    color: white;
+    background-color: rgba(72, 153, 223, 0.6);
+
+    backdrop-filter: blur(1rem) saturate(0%);
+
+    li {
+      opacity: 1;
+    }
   }
 
   &__links {
@@ -69,17 +78,20 @@
     margin: 0;
   
     list-style: none;
-    font-size: 4rem;
+    font-size: 3rem;
     letter-spacing: 1px;
     font-weight: lighter;
     // background-color: rgb(72, 153, 223);
-    background-color: rgba(72, 153, 223, 0.6);
+    // background-color: rgba(72, 153, 223, 0.8);
+    background-color: transparent;
+    color: transparent;
 
-    transition: opacity 0.5s visibility 0.5s;
+    // transition: opacity 0.5s, visibility 0.5s, backdrop-filter 1s;
+    transition: backdrop-filter 1s, opacity 1s, visibility 1s;
 
     li {
+      opacity: 0;
       padding: 2rem;
-      transition: text-shadow 0.2s;
     }
 
     li:hover {
@@ -118,8 +130,24 @@
   }
 }
 
+.navbar.navbar--mobile-background {
+  background-color: white;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
+.navbar.navbar--mobile-background.navbar--hamburger-open {
+  background-color: unset;
+  box-shadow: unset;
+}
+
+// .navbar.navbar--hamburger-open {
+//   li {
+//     opacity: 1;
+//   }
+// }
+
 @media screen and (min-width: 768px) {
-  .navbar {
+  .navbar {   
     &__hamburger {
       display: none;
     }
@@ -135,11 +163,15 @@
 
       flex-direction: row;
       font-size: 2rem;
+      color: white;
+      background-color: rgba(72, 153, 223, 0.8);
     }
 
     &__links > li {
       position: relative;
       padding: 1.5rem;
+      opacity: 1;
+      transition: text-shadow 0.2s !important;
     }
 
     &__links > li::before {
@@ -161,6 +193,11 @@
     &__logo {
       display: none;
     }
+  }
+
+  .navbar.navbar--mobile-background {
+    background-color: unset;
+    box-shadow: unset
   }
 }
 
