--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -7,7 +7,10 @@ mat-card {
 
 .project {
   // width:  100%;
-  height: 60rem;
+  // height: 60rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   // border: 1px solid white;
   // border-radius: 2rem;
   background-color: white;
@@ -16,8 +19,124 @@ mat-card {
   // background-color: rgba(23, 54, 81, 0.5);
 
   &__img-container {
+    // keep 1.46 aspect ratio
+    width: 100%;
+    height: 0;
+    padding-bottom: 68%;
+    // height: 30rem;
     position: relative;
-    transition: all 0.5s;
+    transition: transform 0.5s, backdrop-filter 0.5s;
+  }
+
+  &__img-container-replacer {
+    height: 30rem;
+    position: relative; 
+    opacity: 0;
+    display: none;
+  }
+
+  &__img-container--full {
+    position: fixed;
+    top:  0;
+    left: 0;
+    width:  100%;
+    height: 100%;
+    padding: 10rem;
+    z-index: 9999999;
+    backdrop-filter: blur(1rem) saturate(60%);
+    visibility: hidden;
+    animation-name: switchVisibility;
+    animation-duration: 1s;
+    // animation-delay: 2s;
+    animation-fill-mode: forwards;
+    // transition: none;
+
+    .project {
+      &__img {
+        top:  10rem;
+        left: calc(50% - calc(calc((100vh - 20rem) * 1.46))/2);
+        width: calc((100vh - 20rem) * 1.46);
+        height: calc(100% - 20rem);
+        margin: 0;
+        // margin: 10rem 0;
+
+        // left: 0;
+        // width:  calc(100% - 20rem);
+        
+        // padding: 10rem;
+        // margin: 0 10rem;
+        clip-path: polygon(-3.43% -4.47%, 0% -11.86%, -2.05% 107.33%, 0% 102.33%);
+        animation-name: swipeRight;
+        object-fit: contain;
+        animation-delay: 0.3s;
+        animation-duration: 1s;
+        animation-timing-function: ease-in-out;
+        animation-direction: reverse;
+        animation-fill-mode: forwards;
+        border-bottom: unset !important;
+        border-radius: unset !important;
+
+        &:hover {
+          box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+          border-radius: unset !important;
+        }
+      }
+
+      &__expand {
+        opacity: 1;
+        top: 2rem;
+        // right: 2rem;
+        right: calc(50% - 9.3rem - calc((100vh - 20rem) * 1.46)/2);
+        font-size: 4rem;
+        color: rgb(255, 63, 63);
+        // transition: color 0.5s;
+
+        &:hover {
+          color: $primary-color;
+          transform: unset;
+        }
+      }
+  
+      &__img-background {
+        opacity: 0;
+      }
+
+      &__ball-container {
+        opacity: 1;
+        bottom: 4.5rem;
+      }
+
+      &__arrow--left {
+        opacity: 1;
+        left: calc(50% - 8.5rem - calc((100vh - 20rem) * 1.46)/2);
+      }
+
+      &__arrow--right {
+        opacity: 1;
+        right: calc(50% - 8.5rem - calc((100vh - 20rem) * 1.46)/2);
+      }
+    }
+  }
+
+  &__img-container--full:hover {
+    transform: none !important;
+  }
+
+  &__expand {
+    position: absolute;
+    top:   0;
+    right: 0;
+    display: none;
+    padding: 0.7rem 0.7rem 0 0;
+    opacity: 0;
+    font-size: 2.2rem;
+    color: $primary-color;
+    cursor: pointer;
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 
   &__ball-container {
@@ -41,21 +160,88 @@ mat-card {
     transition: all 1s;
   }
 
+  &__ball:hover {
+    background-color: #4899df;
+  }
+
+  &__arrow {
+    width: 10rem;
+    height: 3.5rem;
+    display: flex;
+    border-radius: 4px;
+    justify-content: center;
+    position: absolute;
+    top: calc(50% - 1.75rem);
+    opacity: 1;
+    transition: background-color 0.5s;
+
+    fa-icon {
+      display: flex;
+      font-size: 3.5rem;
+      color: #4899df;
+    }
+  }
+
+  &__arrow .fa-w-14 {
+    vertical-align: unset;
+  }
+
+  &__arrow:hover {
+    cursor: pointer;
+    background-color: rgba(0,0,0,0.1);
+  }
+
+  &__arrow--left {
+    left: 0rem;
+    transform: rotate(90deg) translateY(3.25rem);
+  }
+
+  &__arrow--right {
+    right: 0rem;
+    transform: rotate(-90deg) translateY(3.25rem);
+  }
+
   &__ball--selected {
     background-color: $primary-color;
   }
 
   &__img {
     width: 100%;
-    height: 30rem;
-    position: relative;
+    height: 100%;
+    position: absolute;
     // border-radius: 2rem;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     border-bottom: 1px solid white;
     object-fit: cover;
     cursor: pointer;
-    transition: border-radius 0.5s;
+    opacity: 0;
+    // z-index: -1;
+    // transition: border-radius 0.5s, opacity 0.3s ease-out;
+    transition: border-radius 0.5s, opacity 0.5s ease-out, filter 0.8s ease-in-out, box-shadow 0.5s;
+    filter: saturate(0%);
+  }
+
+  &__img.visible {
+    filter: unset !important;
+  }
+
+  &__img-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+  }
+
+  &__img--current {
+    z-index: 99;
+    // animation-name: swipeRight;
+  }
+
+  &__img--previous {
+    z-index: 100;
   }
 
   &__header {
@@ -74,10 +260,20 @@ mat-card {
 
   &__desc {    
     // border-top: 1px dotted white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
     padding: 2rem;
     font-size: 2rem;
     line-height: 1.5;
     font-weight: lighter;
+  }
+
+  &__links {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2rem;
   }
 
   &__tech {
@@ -86,19 +282,20 @@ mat-card {
   }
 
   &__github {
-    position: absolute;
-    right:  2rem;
-    bottom: 2rem;
+    // position: absolute;
+    // right:  2rem;
+    // bottom: 2rem;
     height: 3.5rem;
+    margin-left: auto;
     line-height: 1;
     font-size: 3.5rem;
     color: black;
   }
 
   &__try {
-    position: absolute;
-    bottom: 2rem;
-    left: 2rem;
+    // position: absolute;
+    // bottom: 2rem;
+    // left: 2rem;
     border: 1px solid black;
     transition: background-color 0.5s, color 0.5s;
   }
@@ -116,15 +313,35 @@ mat-card {
       opacity: 0;
     }
 
+    &__expand {
+      display: block;
+    }
+
+    &__arrow {
+      opacity: 0;
+    }
+
+    &__img-background {
+      border-radius: 2.5rem;
+    }
+
     &__img-container:hover {
       transform: scale(1.1);
     
-      img {
+      .project__img {
         // object-fit: contain;
         border-radius: 2rem;
       }
 
+      .project__expand {
+        opacity: 1;
+      }
+
       .project__ball-container{
+        opacity: 1;
+      }
+
+      .project__arrow {
         opacity: 1;
       }
     }
@@ -140,7 +357,8 @@ mat-card {
     }
 
     &__tech {
-      width: 4.5rem;
+      width: 4.2rem;
+      height: 4.2rem;
       top: 0.8rem;
     }
 
@@ -159,4 +377,14 @@ mat-card {
       font-size: 4rem;
     }
   }
+}
+
+@keyframes swipeRight {
+  0%   { opacity: 0.5 !important; clip-path: polygon(-3.43% -4.47%, 103.37% -14.86%, 103.86% 108.66%, 0% 102.33%); }
+  100% { opacity: 1  !important;  clip-path: polygon(-3.43% -4.47%, 0% -11.86%, -2.05% 107.33%, -1.53% 103.45%); }
+}
+
+@keyframes switchVisibility {
+  0% {   visibility: hidden; }
+  100% { visibility: visible; }
 }
