--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,24 +1,19 @@
 @import "colors.scss";
 
 :host {
-  // background: linear-gradient(90deg, #a2cdf0 0%, #285c8b 100%);
-  // background-color: #4899df;
   position: relative;
   padding-top: 5rem;
 }
 :host.off {
-  background-color: rgb(23, 54, 81);
+  background-color: $primary-color-dark;
 }
 
 .projects {
   display: grid;
-  // grid-template-rows: repeat(6, 50vh);
-  // grid-template-columns: 100%;
   grid-template-columns: repeat(auto-fill, minmax(37rem, 1fr));
   grid-template-rows: 21rem repeat(8, 1fr);
   justify-items: center;
   align-items: baseline;
-  // gap: 2rem;
 
   &.fullscreen {
     transition: unset !important;
@@ -30,7 +25,6 @@
     background-size: cover;
     background-repeat:   no-repeat;
     background-position: left;
-    // background-position-y: -6rem;
     background-position-x: -101rem;
   }
 
@@ -50,7 +44,6 @@
 
     h1 {
       margin: 0;
-      // border-bottom: 5px dotted rgba(23, 54, 81, 0.5);
       border-left: 0.9rem dotted black;
       text-shadow: -2px 0px 1px rgb(0,0,0), 0px 2px 1px rgb(0,0,0), 2px 0px 1px rgb(0,0,0), 0px -2px 1px rgb(0,0,0);
       color: white;
@@ -68,10 +61,6 @@
     max-width: 50rem;
     min-height: 60rem;
     padding: 3rem;
-  }
-
-  &__item:first-of-type {
-    // padding-top: 6rem;
   }
 
   &__empty-cell {
@@ -92,15 +81,6 @@
   }
 }
 
-@media screen and (min-width: 768px) {
-  .projects {
-    &__header {
-      // grid-column: 1/3;
-      // justify-self: baseline;
-    }
-  }
-}
-
 @media screen and (min-width: 840px) {
   .projects {
     grid-template-rows: 21rem repeat(4, 1fr);
@@ -108,21 +88,10 @@
     &__empty-cell {
       display: block;
     }
-
-    &__background {
-      // background-position-y: -1rem;
-    }
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .projects {
-    // grid-template-areas: "p1 line p2";
-    // grid-template-columns: 1fr 50px 1fr;
-
-
-   }
-
   .line {
     grid-area: line;
     background-color: red;
