--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -1,17 +1,15 @@
 @import "colors.scss";
 
 :host {
-  // background-color: #1f7dce;
-  // background-color: rgb(72, 153, 223);
   overflow: hidden;
 }
 :host.off {
-  background-color: rgb(23, 54, 81);
+  background-color: $primary-color-dark
 }
 
 .welcome {
   height: 100vh;
-
+  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -23,18 +21,10 @@
   &__background {
     background-image: url("~/assets/oskar.png");
     background-size: cover;
-    background-repeat:   no-repeat;
+    background-repeat: no-repeat;
     background-position: center;
-    // opacity: 0;
-    // transform: scale(1.5);
-    // transition: opacity 1s ease-out, transform 3s ease-out;
   }
   
-  &__background--active {
-    opacity: 1;
-    transform: scale(1);
-  }
-
   &__container {
     padding-left:  2rem;
     padding-right: 2rem;
@@ -45,8 +35,8 @@
   &__header {
     padding: 0;
     margin:  0;
+    border-bottom: 4px solid $primary-color;
     color: $primary-color;
-    border-bottom: 4px solid rgb(72, 153, 223);
     text-align: center;
     font-weight: bold;
   }
@@ -54,7 +44,6 @@
   &__sub-header {
     margin-top: 1.1rem;
     font-size: 2rem;
-    // text-shadow: 0px 1px 0px black, 1px 0px 0px black, -1px 0px 0px black, 0px -1px black;
     color: $primary-color;
     text-align: center;
   }
@@ -63,8 +52,8 @@
     position: absolute;
     bottom: 0;
     font-size: 5rem;
-    cursor: pointer;
     color: $primary-color;
+    cursor: pointer;
     transition: color 0.5s;
   }
 
@@ -77,35 +66,31 @@
     justify-content: space-evenly;
 
     width: 100%;
-    // height: 5rem;
     height: 5.8rem;
 
     margin-top: 3rem;
 
     a {
-      width: 5rem;
+      width:  5rem;
       height: 5rem;
       display: flex;
       align-items: center;
       justify-content: center;  
 
       padding: 1rem;
-      // color: white;
-      // border: 1px solid white;
-      border-radius: 50%;
       border: 3px solid $primary-color;
+      border-radius: 50%;
       box-shadow: 0px 0px 3px white;
       color: $primary-color;
       transition: border 0.5s, color 0.5s;
-    }
 
-    a:hover {
-      color: $primary-color-dark;
-      border: 3px solid $primary-color-dark;
+      &:hover {
+        color: $primary-color-dark;
+        border: 3px solid $primary-color-dark;
+      }
     }
 
     fa-icon {
-      // width: 3rem;
       height: 2.5rem;
       font-size: 2.5rem;
       cursor: pointer;
@@ -134,12 +119,11 @@
     }
 
     &__header {
+      padding: 0rem;
       text-align: center;
       font-size: 7rem;
-
-      padding: 0rem;
-      color: $primary-color;
       font-weight: bold;
+      color: $primary-color;
     }   
 
     &__sub-header {
@@ -157,7 +141,6 @@
       fa-icon {
         height: 3rem;
         font-size: 3rem;
-        // font-size: 3.5rem;
       }
     }
 
