--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,9 +6,15 @@
 }
 
 html, body {
+  height: 100%;
   font-size: 10px;
   color: white;
   font-family: sans-serif;
+}
+
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 h1 {
@@ -60,6 +66,3 @@ h2 {
 .filter-transition {
   transition: filter 1s;
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
