--- a/src/app/components/tech/tech.component.scss
+++ b/src/app/components/tech/tech.component.scss
@@ -1,4 +1,6 @@
 @import "colors.scss";
+@import "breakpoints.scss";
+
 :host {
   z-index: 999;
 }
@@ -63,7 +65,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $desktop-small-breakpoint) {
   .tech {
     &__logo {
       width:  6rem;
@@ -72,7 +74,7 @@
   }
 }
 
-@media screen and (min-width: 1760px) {
+@media screen and (min-width: $desktop-wide-breakpoint) {
   .tech {
     padding-top: 10rem;
 
