--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/normalize.css/normalize.css";
+@import "breakpoints.scss";
 
 * {
   box-sizing: border-box;
@@ -25,7 +26,7 @@ h2 {
   font-size: 2rem;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $desktop-normal-breakpoint) {
   h1 {
     font-size: 7rem;
   }
