--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -16,8 +16,9 @@
       <h2 class="timeline__header">POCZĄTKI PROGRAMOWANIA</h2>
       <h3 class="timeline__header-date">2011</h3>
       <ul class="timeline__list">
-        <li>urodzilem sie</li>
-        <li>zaprogramowanie kalkulatora konsolowego</li>
+        <li>zainteresowanie się programowaniem w gimnazujm</li>
+        <li>pierwszy język: C++</li>
+        <li>pierwsze projekty: wyścigowa gra 2D, okienkowe kółko i krzyżyk</li>
       </ul>
     </div> 
     <div class="timeline__xilo" [ngClass]="{ 'visible': progress > 20 }" >
@@ -25,34 +26,36 @@
       <h3 class="timeline__header-date">2013 - 2016</h3>
       <ul class="timeline__list">
         <li>profil mat-fiz</li>
-        <li>ułozenie kostki rubika</li>
-        <li>reprezentant klasy w biegach</li>
-        <!-- <li>matura z informatyki (68%)</li> -->
+        <li>pierwsze podejście do grafiki 3D (OpenCV)</li>
+        <li>projekt prostej przeglądarki</li>
+        <li>poziom B2 z angielskiego (egzamin FCE)</li>
+        <li>matura z informatyki: 68% (percentyl: 84%)</li>
       </ul>
     </div>
     <div class="timeline__pb" [ngClass]="{ 'visible': progress > 50 }" >
       <h2 class="timeline__header">POLITECHNIKA BIAŁOSTOCKA</h2>
       <h3 class="timeline__header-date">2016 - 2020</h3>
       <ul class="timeline__list">
-        <li>brak uwag od nauczycieli</li>
-        <li>kupno kanapki koledze</li>
+        <li>dwukrotnie drugi najlepszy student na roku</li>
+        <li>wielokrotne stypendium rektora dla najlepszych studentów</li>
         <li>5 miejsce w kat. C++ (BTI 2016)</li>
-        <li>okielznanie druta</li>
-        <li>studia ukonczone bez spania</li>
-        <!-- <li>Nr. 1 w rankingu studentów(2019)</li> -->
-        <!-- <li>Stypendia rektora</li> -->
-        <!-- <li>Praca inzynierska zakończona artykułem naukowym</li> -->
-        <!-- <li>Studia ukończone z oceną bardzo dobrą</li> -->
+        <li>zainteresowanie technologiami internetowymi (w szczególności front-end)</li>
+        <li>Praca dyplomowa
+          <ul class="timeline__inner-list">
+            <li>"Opracowanie zestawu narzędzi badawczych do eksperymentów z dźwiękiem binauralnym"</li>
+            <li>udział w przeprowadzeniu międzynarodowego badania</li>
+            <li>współautorstwo w opublikowanym artykule naukowym (<a href="https://www.mdpi.com/2076-3417/10/17/5956/htm" target="_blank">artykuł</a>)</li>
+          </ul>
+        </li>
+        <li>studia ukończone z oceną bardzo dobrą</li>
       </ul>
     </div> 
     <div class="timeline__finish" [ngClass]="{ 'visible': progress > 90 }" >
       <h2 class="timeline__header">FREELANCER</h2>
       <h3 class="timeline__header-date">2020 - obecnie</h3>
       <ul class="timeline__list">
-        <li>Korepetycje z C</li>
-        <li>Salon paznokcia</li>
-        <!-- <li>Wordpress</li> -->
-        <!-- <li>Specjalizacja</li> -->
+        <li>specjalizacja w technologiach front-end</li>
+        <li>korepetycje i projekty komercyjne</li>
       </ul>
     </div> 
   </div>
